--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Django + Tailwind + Alpine.js{% endblock %}
+{% block title %}Django Cazenga-UI{% endblock %}
 
 {% block page_content %}
 <div class="text-center py-16">
